# win32-study

mfc/mfc-hello/: CMakeLists.txt  CMakePresets.json  main.cpp
win32/win32-mini/: CMakeLists.txt  CMakePresets.json  build.bat  main.c
